[gd_scene load_steps=6 format=2]

[ext_resource path="res://Match 3 Assets/blue_panel.png" type="Texture" id=1]
[ext_resource path="res://Match 3 Assets/pause.png" type="Texture" id=2]
[ext_resource path="res://Pause.gd" type="Script" id=3]
[ext_resource path="res://Match 3 Assets/home.png" type="Texture" id=4]
[ext_resource path="res://Match 3 Assets/return.png" type="Texture" id=5]

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="PauseBox" type="TextureRect" parent="."]
visible = false
margin_left = 176.0
margin_top = 200.0
margin_right = 432.0
margin_bottom = 520.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseIcon" type="Sprite" parent="PauseBox"]
position = Vector2( 128, 40 )
scale = Vector2( 0.5, 0.58 )
texture = ExtResource( 2 )

[node name="HomeButton" type="TextureButton" parent="PauseBox"]
margin_left = 168.0
margin_top = 208.0
margin_right = 218.0
margin_bottom = 258.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="PauseBox"]
margin_left = 40.0
margin_top = 208.0
margin_right = 90.0
margin_bottom = 258.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTween" type="Tween" parent="."]
[connection signal="pressed" from="PauseBox/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="PauseBox/ContinueButton" to="." method="_on_ContinueButton_pressed"]
